# epimetheus

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  default.nix
.github/workflows/: build.yml
docs/: epimetheus.vhs
src/: main.rs
test/: test_basic.csv  test_basic.json  test_basic.yml  test_nested.json  test_nested.yml  test_nested_with_list.json
