[package]
name = "epimetheus"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/jpetrucciani/epimetheus"
readme = "README.md"
license = "MIT"
description = """
A fast and simple way to expose json/yaml/csv files (local and over http) as prometheus metrics!
"""

[dependencies]
axum = "0.6"
clap = { version = "4", features = ["derive", "env"] }
csv = "1.1"
prometheus = "0.13"
reqwest = { version = "0.11", default-features = false, features = [
    "brotli",
    "gzip",
    "json",
    "rustls-tls",
] }
serde_json = "1.0"
serde_yaml = "0.9"
slog = "2.7"
slog-async = "2.7"
slog-json = "2.6"
slog-term = "2.9.1"
tokio = { version = "1", features = ["full"] }
